# cutspy

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
cutspy/: __init__.py  cutspy.py  cutspy_dom.py
cutspy/renders/: __init__.py  renders.py  text_model_render.py
tests/cutspy/: test_cutspy_dom.py
